--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Stop Watch!</title>
 </head>
 <body>
+    <div id = "content">
+        <h1>Stop Watch</h1>
+        <h2 id = "time">00:00:00:0000</h2>
+        <div id = "button">
+            <button id = "Start">Start</button>
+            <button id = "Reset">Reset</button>
+
+        </div>  
+    </div>
+
     <script src="js/main.js"></script>
 </body>
 </html>
