--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <title>Stop Watch!</title>
 </head>
 <body>
-    <div id = "content">
+    <div id = "body">
         <h1>Stop Watch</h1>
-        <h2 id = "time">00:00:00:0000</h2>
-        <div id = "button">
-            <button id = "Start">Start</button>
-            <button id = "Reset">Reset</button>
-
+        <div id = "content">
+            <h2 id = "time">00:00:00:0000</h2>
+            <div id = "button">
+                <button id = "Start">Start</button>
+                <button id = "Reset">Reset</button>
+            </div>
         </div>  
     </div>
 
