--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <div id = "body">
         <h1>Stop Watch</h1>
         <div id = "content">
-            <h2 id = "time">00:00:00:0000</h2>
-            <div id = "button">
+            <h2 id = "time">00:00:00.000</h2>
+            <div id = "buttons">
                 <button id = "Start">Start</button>
                 <button id = "Reset">Reset</button>
             </div>
