--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div id = "content">
             <h2 id = "time">00:00:00.000</h2>
             <div id = "buttons">
-                <button id = "Start">Start</button>
-                <button id = "Reset">Reset</button>
+                <button id = "start">Start</button>
+                <button id = "reset">Reset</button>
             </div>
         </div>  
     </div>
