Added paragraph at top, sets target

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     <div id = "body">
         <h1>Stop Watch</h1>
         <div id = "content">
-            <h2 id = "time">00:00:00.000</h2>
+            <div id = "number">
+                <span>Try to stop the timer at </span>
+                <span id = "random"></span>
+                <span> seconds</span>
+            </div>
+            <div id = time>
+                <span id="minutes">00</span>:
+                <span id="seconds">00</span>:
+                <span id="ms">000</span>
+            </div>
             <div id = "buttons">
                 <button id = "start">Start</button>
                 <button id = "reset">Reset</button>
