Disable stop/start button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id = "content">
             <div id = "number">
                 <span>Try to stop the timer at </span>
-                <span id = "random"></span>
+                <b><span id = "random">?</span></b>
                 <span> seconds</span>
             </div>
             <div id = time>
