Display of clock changed

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <span> seconds</span>
             </div>
             <div id = time>
-                <span id="minutes">00</span>:
-                <span id="seconds">00</span>:
-                <span id="ms">000</span>
+                <span id="minutes">??</span>:
+                <span id="seconds">??</span>:
+                <span id="ms">???</span>
             </div>
             <div id = "buttons">
                 <button id = "start">Start</button>
