--- a/index.html
+++ b/index.html
@@ -15,13 +15,23 @@
                 <span> seconds</span>
             </div>
             <div id = time>
-                <span id="minutes">??</span>:
-                <span id="seconds">??</span>:
-                <span id="ms">???</span>
+                <span id="minutes">00</span>:
+                <span id="seconds">00</span>:
+                <span id="ms">000</span>
             </div>
             <div id = "buttons">
                 <button id = "start">Start</button>
                 <button id = "reset">Reset</button>
+            </div>
+            <div id = "messages">
+                <div id = "message1">
+                    <span id = "targetTimeMessage">The time you needed was: </span>
+                    <span id = "targetTime"></span>
+                </div>
+                <div id = "message2">
+                    <span id = "stoppedTimeMessage">You stopped at: </span>
+                    <span id = "stoppedTime"></span>
+                </div>
             </div>
         </div>  
     </div>
