Round counter, starting to calculate difference

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <div id = "body">
         <h1>Stop Watch</h1>
         <div id = "content">
+            <div id = "round">
+
+                <span>Round </span>
+                <b><span id = "roundCount">0</span></b>
+            </div>
             <div id = "number">
                 <span>Try to stop the timer at </span>
                 <b><span id = "random">?</span></b>
