Difference now calculated and displayed

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                     <span id = "stoppedTimeMessage">You stopped at: </span>
                     <span id = "stoppedTime"></span>
                 </div>
+                <div id = "message3">
+                    <span id = "differenceMessage">You were off by: </span>
+                    <span id = "difference"></span>
+                    <span id = "differenceMessage2"> seconds</span>
+                </div>
             </div>
         </div>  
     </div>
