Added 'best' line, monitors the closest score

--- a/index.html
+++ b/index.html
@@ -31,16 +31,21 @@
             <div id = "messages">
                 <div id = "message1">
                     <span id = "targetTimeMessage">The time you needed was: </span>
-                    <span id = "targetTime"></span>
+                    <b><span id = "targetTime">????</span></b>
                 </div>
                 <div id = "message2">
                     <span id = "stoppedTimeMessage">You stopped at: </span>
-                    <span id = "stoppedTime"></span>
+                    <b><span id = "stoppedTime">????</span></b>
                 </div>
                 <div id = "message3">
                     <span id = "differenceMessage">You were off by: </span>
-                    <span id = "difference"></span>
+                    <b><span id = "difference">????</span></b>
                     <span id = "differenceMessage2"> seconds</span>
+                </div>
+                <div id = "message4">
+                    <span id = "bestMessage">Your closest time was: </span>
+                    <b><span id = "best">????</span></b>
+                    <span id = "bestMessage2"> seconds</span>
                 </div>
             </div>
         </div>  
