--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         <h1>Stop Watch</h1>
         <div id = "content">
             <div id = "round">
-
                 <span>Round </span>
                 <b><span id = "roundCount">0</span></b>
             </div>
@@ -19,6 +18,10 @@
                 <b><span id = "random">?</span></b>
                 <span> seconds</span>
             </div>
+            <aside>
+                <p>Current Score:</p>
+                <p id = "score"></p>
+            </aside>
             <div id = time>
                 <span id="minutes">00</span>:
                 <span id="seconds">00</span>:
