--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <aside>
                 <p>Current Score:</p>
-                <p id = "score"></p>
+                <p id = "score">0</p>
             </aside>
             <div id = time>
                 <span id="minutes">00</span>:
