Scored/Total score now, placeholder

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
             </div>
             <aside>
                 <p>Current Score:</p>
-                <p id = "score">0</p>
+                <div id = "scoreOverTotal">
+                    <span id = "score">0</span>
+                    <span>/</span>
+                    <span id = "biggestScore">0</span>
+                </div>
             </aside>
             <div id = time>
                 <span id="minutes">00</span>:
