Resets on 10th round, everything resets

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <span> seconds</span>
             </div>
             <aside>
-                <p>Current Score:</p>
+                <p id = "scoreTitle">Current Score:</p>
                 <div id = "scoreOverTotal">
                     <span id = "score">0</span>
                     <span>/</span>
