Shows increment each round

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <span id = "score">0</span>
                     <span>/</span>
                     <span id = "biggestScore">0</span>
+                    <p id = "addition"></p>
                 </div>
             </aside>
             <div id = time>
